--- a/futbol2.html
+++ b/futbol2.html
@@ -405,7 +405,7 @@
                     <div class="absolute -top-10 -right-10 w-40 h-40 bg-yellow-500/20 rounded-full"></div>
                     <h2 class="text-white text-4xl md:text-5xl font-black uppercase italic tracking-tighter">Ficha de
                         Ingreso</h2>
-                    <p class="text-[#eab308] mt-4 font-black uppercase text-xs tracking-[0.4em]">Temporada 2024-2025</p>
+                    <p class="text-[#eab308] mt-4 font-black uppercase text-xs tracking-[0.4em]">Temporada 2025-2026</p>
                 </div>
 
                 <form id="form-registration" class="p-12 space-y-8">
@@ -823,8 +823,8 @@
                 timestamp: new Date().toISOString()
             };
 
-            // WhatsApp Link Construction - NÚMERO ACTUALIZADO: +39 388 390 9873
-            const clubPhone = "393883909873";
+            // WhatsApp Link Construction - NÚMERO ACTUALIZADO: +51 997548587
+            const clubPhone = "997548587";
             const waMsg = `Hola, envío datos para inscripción CLUB SEÑOR CRISTO ASCENSION:
             
 Representante: ${data.parent}
@@ -883,3 +883,4 @@ WhatsApp: ${data.phone}`;
 </body>
 
 </html>
+
